codex-rs/tui/src/snapshots/codex_tui__keymap_setup__tests__keymap_voice_toggle.snap
---
source: tui/src/keymap_setup.rs
expression: "render_picker(build_keymap_action_menu_params(\"chat\".into(),\n\"toggle_voice\".into(), &RuntimeKeymap::defaults(), &TuiKeymap::default(),),\n80,)"
---

  Edit Shortcut
  Toggle Voice · Chat
  Current f9 · Default keymap
  Config `tui.keymap.chat.toggle_voice`
  Start or stop a voice conversation.


› 1. Replace binding                   Capture a replacement key for `f9`
  2. Add alternate binding             Keep `f9` and add another key
  3. Replace with key chord            Replace `f9` with a two-stroke key chord
  4. Add alternate key chord           Keep `f9` and add a two-stroke key chord
  –  Remove custom binding (disabled)  No custom root override to remove
  5. Back to shortcuts                 Return to the shortcut list

  Changes write the root `tui.keymap.*` override.
  enter select · esc back
